<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/movie_list_item_background">

    <ImageView
        android:id="@+id/imageViewPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/poster_of_the_movie"
        android:cropToPadding="false"
        android:foreground="@drawable/fading_poster"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster_avengers" />


    <TextView
        android:id="@+id/textViewAgeRestriction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/pg_shape"
        android:elevation="20dp"
        android:padding="4dp"
        android:text="@string/pg13"
        android:textColor="@color/text_white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGenres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/action_adventure_fantasy"
        android:textColor="#FF3466"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewReviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="6dp"
        android:max="5"
        android:numStars="5"
        android:progressBackgroundTint="#6D6D80"
        android:progressTint="#FF3365"
        android:rating="3.5"
        android:scrollbarSize="2dp"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/textViewReviews"
        app:layout_constraintEnd_toStartOf="@+id/textViewReviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewReviews" />

    <TextView
        android:id="@+id/textViewReviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/count_reviews"
        android:textAllCaps="true"
        android:textColor="#6D6D80"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ratingBar" />

    <TextView
        android:id="@+id/textViewMovieName"
        style="@style/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/avengers_end_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPoster" />

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/count_min"
        android:textAllCaps="true"
        android:textColor="#6D6D80"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMovieName" />

    <ImageView
        android:id="@+id/imageViewFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_like"
        android:contentDescription="@string/favorite"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>